エラ〜メッセージ日本語化

--- a/config/locales/tasks/en.yml
+++ b/config/locales/tasks/en.yml
@@ -3,6 +3,8 @@ en:
     new:
       title: 'New Task'
       to_back_page: 'Back'
+      error: 'error'
+      error_message: 'prohibited this task from being saved:'
     index:
       tasks: 'Tasks'
       name: 'Task Name'
