--- a/config/locales/tasks/en.yml
+++ b/config/locales/tasks/en.yml
@@ -9,13 +9,22 @@ en:
       tasks: 'Tasks'
       name: 'Task Name'
       description: 'Description'
+      status: 'status'
+      deadline: 'deadline'
+      priority: 'priority'
+      search: 'search'
       to_show_page: 'Show'
       to_edit_page: 'Edit'
       to_delete: 'Destroy'
       to_new_page: 'New Task'
+      sort_of_deadline: 'sort of deadline'
+      sort_of_priority: 'sort of priority'
     show:
       name: 'Name:'
       description: 'Description:'
+      status: 'status:'
+      deadline: 'deadline:'
+      priority: 'priority:'
       to_edit_page: 'Edit'
       to_back_page: 'Back'
     edit:
