--- a/config/locales/tasks/ja.yml
+++ b/config/locales/tasks/ja.yml
@@ -7,15 +7,24 @@ ja:
       error_message: '次の内容を修正して下さい:'
     index:
       tasks: 'タスク一覧'
-      name: 'タスク名'
-      description: 'タスク詳細'
+      name: 'タイトル'
+      description: '内容'
+      status: '進捗'
+      deadline: '終了期限'
+      priority: '優先度'
+      search: '検索'
       to_show_page: '詳細'
       to_edit_page: '編集'
       to_delete: '削除'
-      to_new_page: '新規タスク'
+      to_new_page: '新規タスク作成'
+      sort_of_deadline: '終了期限で並べる'
+      sort_of_priority: '優先度で並べる'
     show:
-      name: 'タスク名:'
-      description: 'タスク詳細:'
+      name: 'タイトル:'
+      description: '内容:'
+      status: '進捗:'
+      deadline: '終了期限:'
+      priority: '優先度:'
       to_edit_page: '編集'
       to_back_page: '戻る'
     edit:
