一覧画面に投稿者表

--- a/config/locales/tasks/en.yml
+++ b/config/locales/tasks/en.yml
@@ -36,6 +36,7 @@ admin:
       status: 'Status'
       deadline: 'Deadline'
       priority: 'Priority'
+      user_name: 'Name'
       search: 'Search'
       to_show_page: 'Show'
       to_edit_page: 'Edit'
