--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -16,3 +16,5 @@ ja:
         current_password: 現在のパスワード
         password: パスワード
         password_confirmation: 確認用パスワード
+      label:
+        name: ラベル名
